--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,14 +7,14 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #5b60fc;
+  --ifm-color-primary-dark: #393ffb;
+  --ifm-color-primary-darker: #282ffb;
+  --ifm-color-primary-darkest: #040cec;
+  --ifm-color-primary-light: #7d81fd;
+  --ifm-color-primary-lighter: #8e91fd;
+  --ifm-color-primary-lightest: #c0c2fe;
+  --ifm-code-font-size: 90%;
 }
 
 .docusaurus-highlight-code-line {
