--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,8 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+article img {
+  margin: 0 auto;
+  display: block;
+}
